--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <img src="https://ui-avatars.com/api/?name=Administrator&background=3498db&color=fff" alt="User Avatar">
                     </div>
                     <div class="user-details">
-                        <p class="user-name">Administrator</p>
-                        <p class="user-role">Admin</p>
+                        <p class="user-name">John doe</p>
+                        <p class="user-role">Pelapor</p>
                     </div>
                     <div class="notifications">
                         <button class="notification-btn">
